# ai-delver-intelligence

./: .docker-compose.yml  .gitignore  .run.sh  Dockerfile  Makefile  docker-compose.amd.yml  docker-compose.nvidia.yml  pyproject.docker.toml  pyproject.toml  setup.py
data/level_saves/: test_1.dill
docker/: Dockerfile  docker-compose.nvidia.yml  docker-compose.yml
src/: auto_train_request.py  main.py
src/ai/: config.json  config.py  test.py  trainer_controller.py
src/ai/agents/: ppo_agent_factory.py
src/ai/environments/: __init__.py
src/ai/environments/level/: _delver_observation.py  _dijkstra_grid.py  _logger.py  _pathfinder.py  _reward_calculator.py  environment.py
src/ai/environments/level/simulation/: _exploration_grid.py  simulation.py
src/ai/environments/level/simulation/showcase_simulation/: __init__.py  showcase_simulation.py
src/ai/policies/: continuity_random_policy.py  coverage_random_policy.py
src/ai/replay_buffers/: ring_replay_buffer.py
src/ai/sessions/: __init__.py  session_manager.py  session_registry.py
src/ai/trainer/: __init__.py  _evaluator.py  _trainer_agent_manager.py  _trainer_environment_manager.py  _trainer_factory.py  _trainer_model_manager.py  _trainer_replay_manager.py  _training_metrics.py  _web_socket_observer.py  background_trainer.py  trainer.py  trainer_factory.py
src/ai/trainer/dynamic_trainer/: __init__.py  dynamic_trainer.py
src/ai/utils/: config.json  log_bytes_size.py
src/api/: auto_train.py  connection_manager.py  routes.py  server.py
src/level_holder/: level_holder.py  level_loader.py
